Fix project popup alignment

--- a/src/templates/blogPost.module.scss
+++ b/src/templates/blogPost.module.scss
@@ -44,6 +44,10 @@
 }
 
 .projectPopup {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
@@ -52,16 +56,18 @@
     margin-bottom: 0.5rem;
 }
 
+.projectMoreInfo {
+    margin-bottom: 0;
+}
+
 @media (min-width: 480px) {
     .projectPopup {
         text-align: left;
-        display: flex;
         justify-content: space-around;
+        align-items: stretch;
+        flex-direction: row;
     }
     .projectName {
         margin-top: 0;
-    }
-    .projectMoreInfo {
-        margin-bottom: 0;
     }
 }
